--- a/static/templates/frameworks.html
+++ b/static/templates/frameworks.html
@@ -1,6 +1,7 @@
-
 <!-- Rectangular JS (https://github.com/Topazoo/rectangularjs) -->
-<script src="https://cdn.jsdelivr.net/gh/Topazoo/rectangularjs@master/rectangular-min.js"></script>
-<script src="resources/js/fixtures.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Topazoo/rectangularjs@1.0/rectangular-min.js"></script>
+<script src="https://cdn.rawgit.com/AngularClass/angular-websocket/v2.0.0/dist/angular-websocket.min.js"></script>
+<script src="/js/fixtures.js"></script>
+<script src="/js/sockets.js"></script>
 <!-- Bootstrap -->
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
