--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <h1>PAGE</h1>
+        <div ng-controller="Weight_Socket">
+            {{ weight }}
+        </div>
     </body>
 </html>
